[workspace]
resolver = "2"
members = [
    "foctet",
    "foctet-core", 
    "foctet-mux",
    "foctet-net", 
    "foctet-relay", 
]

[workspace.package]
version = "0.0.2"
edition = "2021"
authors = ["shellrow <shellrow@fortnium.com>"]

[workspace.dependencies]
foctet-core = { version = "0.0.2", path = "foctet-core" }
foctet-mux = { version = "0.0.2", path = "foctet-mux" }
foctet-net = { version = "0.0.2", path = "foctet-net" }
futures = "0.3"
tokio = { version = "1" }
tokio-stream = "0.1"
tokio-util = { version = "0.7" }
anyhow = { version = "1" }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1"
bincode = { version = "2.0", features = ["serde"] }
rcgen = "0.13"
ring = "0.17"
serde = { version = "1" }
stackaddr = { version = "0.6", features = ["serde"] }
