[package]
name = "foctet-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core components and utilities for the Foctet protocol, including serialization, frame structures, and cryptographic functions."

[dependencies]
anyhow = { version = "1" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
bytes = "1"
bincode = "1.3"
base32 = "0.5"
memmap2 = "0.9"
rayon-core = "1.12"
blake3 = { version = "1.5", features = ["mmap", "rayon"] }
flate2 = "1.0"
tar = "0.4"
uuid = { version = "1.9", features = ["v4", "fast-rng", "macro-diagnostics"]}
tracing = "0.1"
ring = "0.17"
ttl_cache = "0.5.1"
hex = "0.4"
home = "0.5"

[dev-dependencies]
serde_json = "1.0"
toml = "0.8"
