[package]
name = "foctet-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core components for the Foctet"
repository = "https://github.com/fortnium/foctet"
readme = "../README.md"
license = "MIT"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_bytes = "0.11"
thiserror = { workspace = true }
bitflags = "2.8"
bincode = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
stackaddr = { workspace = true }
ed25519-dalek = { version = "2.1", features = ["rand_core"]}
rand = "0.8"
base32 = "0.5"
zeroize = "1.8"
tokio = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true, features = ["codec"] }
memmap2 = "0.9"
rayon-core = "1.12"
blake3 = { version = "1.5", features = ["mmap", "rayon"] }
hex = "0.4"
bytes = { workspace = true }
flate2 = "1.0"
tar = "0.4"
home = "0.5"
uuid = { version = "1.9", features = ["v4", "fast-rng", "macro-diagnostics"]}
nohash-hasher = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ring = { workspace = true, features = ["alloc", "std"] }
