[package]
name = "foctet-net"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Networking layer for the Foctet protocol, handling QUIC and TCP communication, P2P connections, and data transfer."

[dependencies]
foctet-core = { path = "../foctet-core" }
anyhow = { version = "1" }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
tokio = { version = "1", features = ["rt", "net", "io-util", "fs", "macros", "sync"] }
tokio-stream = "0.1"
tokio-util = {version = "0.7.12", features = ["codec", "rt"] }
tracing = "0.1"
bytes = "1"
netdev = "0.31"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-native-certs = "0.7"
rustls-pemfile = "2.1"
rustls-pki-types = "1.8"
rcgen = "0.13"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"]} 
quinn = "0.11"
quinn-proto = "0.11"
#tokio-tungstenite = { version = "0.23", features = ["__rustls-tls", "rustls-tls-native-roots", "rustls-tls-webpki-roots"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "signal", "macros"] }
clap = { version = "4.5", features = ["derive", "string"] }
tracing = "0.1"
tracing-subscriber = "0.3.0"

[[example]]
name = "quic_connect"
path = "examples/quic_connect.rs"

[[example]]
name = "quic_listen"
path = "examples/quic_listen.rs"

[[example]]
name = "quic_receive_file"
path = "examples/quic_receive_file.rs"

[[example]]
name = "quic_send_file"
path = "examples/quic_send_file.rs"

[[example]]
name = "tcp_connect"
path = "examples/tcp_connect.rs"

[[example]]
name = "tcp_listen"
path = "examples/tcp_listen.rs"

[[example]]
name = "tcp_receive_file"
path = "examples/tcp_receive_file.rs"

[[example]]
name = "tcp_send_file"
path = "examples/tcp_send_file.rs"
