[package]
name = "foctet-net"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Networking and transport layer layer for Foctet, providing connection management and stream handling."
repository = "https://github.com/fortnium/foctet"
readme = "../README.md"
license = "MIT"

[dependencies]
foctet-core = { workspace = true }
foctet-mux = { workspace = true }
rcgen = { workspace = true }
ring = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["fs"]}
tokio-util = {workspace = true, features = ["codec", "rt"] }
stackaddr = { workspace = true }
netdev = "0.34"
ipnet = { version = "2.11" }
webpki = { version = "0.101", package = "rustls-webpki", features = ["std"] }
x509-parser = "0.16"
yasna = "0.5"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-native-certs = "0.7"
rustls-pemfile = "2.1"
rustls-pki-types = "1.8"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"]} 
hickory-proto = { version = "0.24", default-features = false }
hickory-resolver = { version = "0.24", default-features = false, features = ["system-config", "tokio-runtime"] }
quinn = "0.11"
quinn-proto = "0.11"
bytes = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "signal", "macros"] }
clap = { version = "4.5", features = ["derive", "string"] }
tracing = "0.1"
tracing-subscriber = "0.3.0"

[[example]]
name = "connect"
path = "examples/connect.rs"

[[example]]
name = "listen"
path = "examples/listen.rs"
