[package]
name = "foctet-relay"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
stackaddr = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["fs"]}
tokio-util = {workspace = true, features = ["codec", "rt"] }
foctet-core = { workspace = true }
foctet-net = { workspace = true }
quinn = "0.11"
quinn-proto = "0.11"
