[package]
name = "foctet-relay"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
stackaddr = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["fs"]}
tokio-util = {workspace = true, features = ["codec", "rt"] }
foctet-core = { workspace = true }
foctet-net = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "signal", "macros"] }
clap = { version = "4.5", features = ["derive", "string"] }
tracing = "0.1"
tracing-subscriber = "0.3.0"

[[example]]
name = "relay_client"
path = "examples/relay_client.rs"

[[example]]
name = "relay_server"
path = "examples/relay_server.rs"
